Refactor PathSample and add usage for Path.of